# Proyecto_Estructuras_Datos

./: CMakeLists.txt  main.cpp  menu.cpp  menu.h
Models/: AgregarProducto.cpp  AgregarProducto.h  BuscarProducto.cpp  BuscarProducto.h  Categoria.cpp  Categoria.h  Categoría.cpp  Categoría.h  EliminarProducto.cpp  EliminarProducto.h  ListaCategorias.cpp  ListaCategorias.h  ListaProductos.cpp  ListaProductos.h  NodoCategoria.cpp  NodoCategoria.h  NodoProducto.cpp  NodoProducto.h  PIM.cpp  PIM.h  Producto.cpp  Producto.h  Variante.cpp  Variante.h
PracticaColas/: Cola.cpp  Cola.h
db/: SQLiteManager.cpp  SQLiteManager.h  prod.db
listas/Variantes/: ListaVariantes.cpp  ListaVariantes.h  NodoVariante.cpp  NodoVariante.h  listaVariantes.h  listaVarinates.cpp  nodoVariante.cpp  nodoVariante.h
listas/categorias/: ListaCategorias.cpp  ListaCategorias.h  NodoCategoria.h
listas/productos/: ListaProductos.cpp  ListaProductos.h  NodoProducto.cpp  NodoProducto.h
